<resources>
    <string name="locale">en</string>
    <string name="error_user_with_vanity_url_not_found">User not found</string>
    <string name="error_user_with_steamid_not_found">User not found</string>
    <string name="error_invalid_steamid_format">Invalid SteamID format</string>
    <string name="error_steam_api_unavailable">Steam service is unavailable. Please try later again</string>
    <string name="error_check_your_connection">No connection to network. Please, check that and try again later</string>
    <string name="error_unknown">Unknown error</string>
    <string name="log_out">Log Out</string>
    <string name="retry">Retry</string>
    <string name="error_get_owned_games">Failed to get your games</string>
    <string name="error_get_owned_games_privacy">Your profile is private, please make it public</string>
    <string name="placeholder_empty_title">Empty data</string>
    <string name="placeholder_error_title">Error</string>
    <string name="error_zero_games">You have no games yet</string>
    <string name="error_user_update">Failed to update user information</string>
    <string name="account_games_count">You have %d games</string>
    <plurals name="games_count_plurals">
        <item quantity="zero">%d games</item>
        <item quantity="one">%d game</item>
        <item quantity="two">%d games</item>
        <item quantity="few">%d games</item>
        <item quantity="many">%d games</item>
        <item quantity="other">%d games</item>
    </plurals>
    <string name="games_last_sync">Last sync: %1$s</string>
    <string name="last_sync_never">never</string>
    <string name="roulette_options">Options</string>
    <string name="btn_reset_hidden_games">Clear</string>
    <string name="hidden_games_count">Hidden games</string>
    <string name="games_queue_ended">No more matching games!</string>
    <string name="error_filtered_games_not_found">No games matching the specified filters were found</string>
    <string name="restart_queue">Restart</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_warning">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message_reset_hidden_games">Are you sure you want to clear hidden games?</string>
    <string name="login_button_steamid_help">What should I enter here?</string>
    <string name="supported_steamid_formats">Supported SteamID Formats</string>
    <string name="next_game">Next game</string>
    <string name="hide_game">Hide game</string>
    <string name="fab_info_hint">Game info</string>r
    <string name="playtime">Show</string>
    <string name="playtime_pref_all">All games</string>
    <string name="playtime_pref_not_played">Games I\'ve not played</string>
    <string name="playtime_pref_max_time">Games I\'ve played for no more than:</string>
    <plurals name="playtime_pref_max_time_plurals">
        <item quantity="zero">Games I played for no more than %d hours</item>
        <item quantity="one">Games I played for no more than %d hour</item>
        <item quantity="two">Games I played for no more than %d hours</item>
        <item quantity="few">Games I played for no more than %d hours</item>
        <item quantity="many">Games I played for no more than %d hours</item>
        <item quantity="other">Games I played for no more than %d hours</item>
    </plurals>
    <string name="playtime_pref_all_short">All</string>
    <string name="playtime_pref_not_played_short">Not played</string>
    <plurals name="playtime_pref_max_time_plurals_short">
        <item quantity="zero">Played for %d hours or less</item>
        <item quantity="one">Played for %d hour or less</item>
        <item quantity="two">Played for %d hours or less</item>
        <item quantity="few">Played for %d hours or less</item>
        <item quantity="many">Played for %d hours or less</item>
        <item quantity="other">Played for %d hours or less</item>
    </plurals>
    <string name="playtime_hours_label">hour(s)</string>
    <string name="coming_soon">Coming soon</string>
    <string name="game_details_description">Description</string>
    <string name="button_steam_store">Steam store</string>
    <string name="button_community_hub">Community Hub</string>
    <string name="game_details_languages">Languages</string>
    <string name="game_details_platforms">Platforms</string>
    <string name="fail_steam_store_info">Steam Store info isn\'t available for this game</string>
    <string name="system_requirements">System requirements</string>
    <string name="game_description">Description</string>
    <string name="hidden_games">Hidden games</string>
    <string name="make_all_games_visible">Make all visible</string>
    <string name="make_visible">Make visible</string>
    <string name="about_app">About</string>
    <string name="show_app_source_code">Source code</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate">Rate</string>
    <string name="never">Never</string>
    <string name="later">Later</string>
    <string name="rate_app_title">Rate Steam Shuffle</string>
    <string name="rate_app_dialog_message">Hello. It seems like you are enjoying Steam Shuffle. Please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
    <string name="my_steam_library">Library</string>
    <string name="action_search">Search</string>
    <string name="clear_filters">Reset</string>
    <string name="only_hidden">Hidden games</string>
    <string name="you_have_n_games">You have %1$s</string>
    <string name="change_scale">Change scale</string>
    <string name="library_search_hint">Game title</string>
    <string name="login_privacy_hint"><![CDATA[You should set <b>Game details</b> to public and uncheck <b>Always keep my total playtime private</b> option in your Steam profile\'s <b>Privacy Settings</b> for the app to work]]></string>
</resources>
