<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="?dialogPreferredPadding"
        android:paddingRight="?dialogPreferredPadding"
        android:paddingTop="4dp"
        >

    <RadioGroup
            android:id="@+id/rgPlaytime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbPlaytimeAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playtime_pref_all"
                android:textAppearance="?textAppearanceBody2"
                />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbPlayTimeNotPlayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playtime_pref_not_played"
                android:textAppearance="?textAppearanceBody2"
                />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbPlaytimeLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playtime_pref_max_time"
                android:textAppearance="?textAppearanceBody2"
                />

    </RadioGroup>

    <ru.luckycactus.steamroulette.presentation.ui.widget.card_stack.EditTextWithLabel
            android:id="@+id/etPlaytime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            tools:text="9 часов"
            android:textAppearance="?textAppearanceBody2"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            />

</LinearLayout>